--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "gulp-sass": "^4.1.0"
   },
   "dependencies": {
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.2",
+    "@popperjs/core": "^2.9.2",
     "babel-preset-minify": "^0.5.1",
     "bootstrap": "^5.0.1",
     "browser-sync": "^2.26.14",
